src/tui/ui/snapshots/email__tui__ui__golden_frames__golden_mail_view_with_selection.snap
---
source: src/tui/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│> 󰅲 Inbox  5                            ││ From: Anna Weber <anna.weber@example.com>                                  │
02 |│  󰏫 Drafts  2                           ││ To: sylvain@example.org                                                    │
03 |│  󰑫 Sent 41                             ││ Subj: Re: Statusbericht KW31                                               │
04 |│  󰄼 Archive 128                         ││ Date: 2026-07-27  [inbox]                                                  │
05 |│                                        ││                                                                            │
06 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
07 |╭ Inbox ─────────────────────────────────╮╭ Body ──────────────────────────────────────────────────────────────────────╮
08 |│      DATE       SUBJECT                ││Danke, sieht gut aus.                                                       │
09 |│󰄴    2026-07-28 󰃭  Einladung: Bauste… ││                                                                            │
10 |│󰄱     2026-07-27 Re: Statusbericht KW31 ││Ein Punkt bleibt offen: der export-Schritt.                                 │
11 |│󰄴    2026-07-26  Scan 2026-07-26 (3 … ││                                                                            │
12 |│󰄱     2026-07-24 Wochenrückblick: sehr… ││                                                                            │
13 |│󰄱     2026-07-21  Rechnung 2026-0714   ││                                                                            │
14 |│                                        ││                                                                            │
15 |│                                        ││                                                                            │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |│                                        ││                                                                            │
28 |╰────────────────────────────────────────╯│                                                                            │
29 |╭ Activity ──────────────────────────────╮│                                                                            │
30 |│  No activity yet                       ││                                                                            │
31 |│                                        ││                                                                            │
32 |│                                        ││                                                                            │
33 |│                                        ││                                                                            │
34 |╰────────────────────────────────────────╯│                                                                            │
35 |╭ View ──────────────────────────────────╮│                                                                            │
36 |│     mail  |  contacts  |  calendar     ││                                                                            │
37 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
38 | 2 SELECTED   j/k Navigate emails  v Toggle selection  Enter / e Open in editor  r / R Reply / Reply-all  a Archive  d D
39 | ? help                                                                                    2 sel | 2 unread | Inbox 2/5
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |bold@43..50
02 |bold@43..48
03 |bold@43..50
04 |bold@43..50
09 |fg:selection+bold@1..4 bold@4..5 fg:selection+bold@5..41
10 |bg:surface+fg:selection+bold@1..41 bg:surface@71..77
11 |fg:selection+bold@1..4 bold@4..5 fg:selection+bold@5..41
36 |bold@5..11
38 |bold@0..12 bg:surface@12..14 bg:surface+bold@14..17 bg:surface@17..35 bg:surface+bold@35..36 bg:surface@36..55 bg:surface+bold@55..64 bg:surface@64..81 bg:surface+bold@81..86 bg:surface@86..106 bg:surface+bold@106..107 bg:surface@107..117 bg:surface+bold@117..118 bg:surface@118..120
39 |bg:surface@0..120
